Fix for Bug #43958 Assertion (transState != NULL) failed in Transaction::waitForTransaction

Remove too strict assert on the in parameter to Transaction::waitForTransaction.